feat: implement core application structure with routing and authentication
- Add favicon.svg for theme-aware icon
- Remove App.css as styles are now handled with Tailwind CSS
- Set up React Router for navigation between Home, BookDetails, Login, Signup, Profile, and admin routes
- Create AuthProvider for managing authentication state
- Implement reusable components: Button, ConfirmDialog, Dialog, Input, StarRating, and Header
- Add ThemeToggle for dark/light mode switching
- Create custom hook useFetch for data fetching with React Query
- Build pages for Home, BookDetails, Dashboard (BooksTable and ReviewsTable), Login, Signup, NotFound, and Profile
- Implement services for authentication, books, and reviews API interactions
- Set up Tailwind CSS for styling and responsive design
- Add JWT utility functions for role management and token storage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="min-h-full">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/src/main.jsx"></script>
-    <title>New React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- dark-mode hint -->
+    <meta name="color-scheme" content="light dark" />
+
+    <title>BookReviewHub</title>
+
+    <!-- primary SVG favicon (theme-aware) -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <!-- optional PNG fallback -->
+    <link rel="icon" href="/favicon-32.png" sizes="32x32" />
   </head>
-  <body>
+
+  <body
+    class="min-h-full bg-white text-gray-800 dark:bg-black dark:text-gray-100 antialiased"
+  >
     <div id="root"></div>
+
+    <!-- React bundle -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
